@@ -1,3 +1,8 @@
+2007-01-30  Richard Guenther  <rguenther@suse.de>
+
+	PR middle-end/30313
+	* gcc.dg/torture/pr30313.c: New testcase.
+
 2007-01-30  Tobias Burnus  <burnus@net-b.de>
 
 	Backport from mainline.
